# outreach-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
dashboard/: README.md  index.html  sample_log.csv
data/: master_resume.yaml  techniques.json
examples/: README.md
examples/modal-labs/: brief.md  emails.md  resume-tailor.md  teardown.md
examples/together-ai/: README.md
examples/vapi/: README.md
outreach_lab/: __init__.py  atlas.py  brief.py  cli.py  compose.py  llm.py  tailor.py  targets.py  teardown.py  track.py
targets/: example.yaml  together-ai.yaml  vapi.yaml
tests/: test_atlas.py  test_cli.py  test_targets.py  test_track.py
